--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,9 @@
 @import url("./header.css");
 @import url("./banner.css");
 @import url("./carrossel.css");
-/* @import url("./topicos.css");
+@import url("./topicos.css");
 @import url("./contato.css");
-@import url("./rodape.css"); */
+@import url("./footer.css"); 
 
 
 :root{
@@ -13,7 +13,10 @@
     --color-icons: #000000;
     --color-orange: #EB9B00;
     --fonts-poppins: "Poppins", sans-serif;
-    --blue-gradient: linear-gradient(97.54deg, #0314AA 35.49%, #326589 65.37%)
+    --blue-gradient: linear-gradient(97.54deg, #0314AA 35.49%, #326589 65.37%);
+    --color-blue: #002F52;
+    --color-blue-dark: #00285F;
+
 }
 
 body{
