--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -33,3 +33,31 @@
     background: url("../images/Pesquisa.svg") no-repeat;
     background-position: 1em;
 }
+
+ @media screen and (min-width: 1024px){
+    .banner__titulo{
+        font-size: 36px;
+    }
+
+    .banner__pesquisa{
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 5em;
+    }
+ }
+
+ @media screen and (min-width: 1360px){
+
+    .banner{
+        padding: 6em 0;
+    }
+    .banner__pesquisa{
+        width: 35%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 4em;
+    }
+ }
