--- a/assets/css/contato.css
+++ b/assets/css/contato.css
@@ -40,3 +40,34 @@
 .contato__email::focus{
     border: 1px solid var(--color-blue);
 }
+
+
+@media screen and (min-width: 1024px){
+    .contato-wapper{
+        padding: 3em 5%;
+        display: flex;
+        align-content: center;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .contato__descricao{
+        width: 80%;
+        padding: 2em;
+    }
+
+    .topicos__titulo{
+        font-size: 18px;
+        margin-bottom: 1em;
+    }
+}
+
+@media screen and (min-width: 1360px) {
+    .contato-wapper{
+        width: 75vw;
+    }
+
+    .contato__titulo{
+        font-size:1.5rem ;
+    }
+}
