--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -4,4 +4,53 @@ hr{
 
 .footer{
     padding: 1rem;
+    display: flex;
+    gap: 2em;
+    justify-content: space-between;
+}
+
+.lista-footer{
+    display: none;
+}
+
+@media screen and (min-width: 1024px){
+
+    .footer{
+        margin: 2em 5%;
+    }
+
+    .rodape__titulo{
+        font-size: 24px;
+    }
+
+    .lista-footer{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .lista__titulo, .lista__item a{
+        color: var(--color-gray-light);
+        font-size: 14px;
+    }
+
+    .lista__titulo{
+        text-transform: uppercase;
+        margin-bottom: 1em;
+    }
+
+    .lista__item{
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        padding: .6em 0;
+    }
+
+    .lista__item img{
+        width: 100%;
+        max-width: 25px;
+    }
+
+    .lista__item a{
+        margin-left: .5em;
+    }
 }
