--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');
 @import url("./header.css");
 @import url("./banner.css");
 @import url("./carrossel.css");
@@ -12,10 +13,13 @@
     --color-white: #FFFFFF;
     --color-icons: #000000;
     --color-orange: #EB9B00;
-    --fonts-poppins: "Poppins", sans-serif;
     --blue-gradient: linear-gradient(97.54deg, #0314AA 35.49%, #326589 65.37%);
     --color-blue: #002F52;
     --color-blue-dark: #00285F;
+    --color-black80: #18181f;
+    --color-gray-light: #474646;
+    --fonts-poppins: "Poppins", sans-serif;
+    --fonts-josefin: "Josefin Sans", sans-serif;
 
 }
 
